[package]
name = "architectury"
version = "0.2.0"
edition = "2021"

[dependencies]
pretty_assertions = { version = "1", optional = true }
color-eyre = { version = "0.6", optional = true }
tracing = { version = "0.1", optional = true }
tracing-error = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [
    "env-filter",
] }

[features]
base-logging = [
    "dep:color-eyre",
    "dep:tracing",
    "dep:tracing-error",
    "dep:tracing-subscriber",
]

util-testing = ["dep:pretty_assertions"]

all = ["base-logging", "util-testing"]
