[package]
name = "architectury"
description = "A fully featured runtime for Rust"
authors = ["Carter Reeb <me@carteris.online>"]
repository = "https://github.com/carterisonline/architectury"
version = "0.4.0"
edition = "2021"

[dependencies]
pretty_assertions = { version = "1", optional = true }
color-eyre = { version = "0.6", optional = true }
tracing = { version = "0.1", optional = true }
tracing-error = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [
    "env-filter",
] }
rayon = { version = "1", optional = true }
oorandom = { version = "11", optional = true }
once_cell = { version = "1", optional = true }
dotenvy = { version = "0.15", optional = true }

[features]
default = ["assert", "log", "green-threads", "rng", "coreutils", "dotenv"]
log = [
    "dep:color-eyre",
    "dep:tracing",
    "dep:tracing-error",
    "dep:tracing-subscriber",
]
assert = ["dep:pretty_assertions"]
green-threads = ["dep:rayon", "dep:once_cell"]
rng = ["dep:oorandom", "dep:once_cell"]
coreutils = []
dotenv = ["dep:dotenvy"]
